--- a/src/template/layout/header.html
+++ b/src/template/layout/header.html
@@ -2,6 +2,44 @@
 
     <div class="blackout"></div>
 
+    <div class="bgwords"></div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="top">
+                    <div class="pull-left">
+                        <div class="logo">
+                            <p>
+                                <i class="fa fa-diamond" aria-hidden="true"></i>
+                                Клуб-результат
+                            </p>
+                        </div>
+                        <div class="desc">
+                            <p>Бизнес-клуб закрытого типа в Минске</p>
+                        </div>
+                    </div>
+                    <div class="pull-right">
+                        <p class="desc">Запись на собеседование</p>
+                        <p class="phone">+375 (29) 6-377-311</p>
+                        <p>
+                            <button type="button" class="btn btn-main" data-toggle="modal" data-target="#modalOrder" data-service="Шапка" role="button">Консультация</button>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="header-content">
+                    <h1>
+                        Достигать в окружении единомышленников с
+                        личным доходом от 45 млн. руб
+                    </h1>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </header>
