--- a/src/assets/style/base/_common.scss
+++ b/src/assets/style/base/_common.scss
@@ -27,8 +27,9 @@ html {
 }
 
 body {
-    @extend %font-PT_Serif;
+    @extend %font-PT_Sans;
     font-size: 14px;
+    line-height: 1.2em;
     padding: 0;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
             font-smoothing: antialiased;
@@ -87,7 +88,7 @@ h3,
 h4,
 h5,
 h6 {
-
+    line-height: 1.3em;
 }
 
 // Extras
