Добавил блок-класс в класс sectionSlide

--- a/src/assets/style/modules/_sectionSlide.scss
+++ b/src/assets/style/modules/_sectionSlide.scss
@@ -6,8 +6,11 @@
     position: relative;
     text-align: center;
 
-    h2 {
-        font-size: 2.5em; /*2.142857143em*/
+    .sectionSlide-content {
+
+        h2 {
+            font-size: 2.5em; /*2.142857143em*/
+        }
     }
 }
 
