Переименовал блок #white_envy в #provocation

--- a/src/template/layout/sections/provocation.html
+++ b/src/template/layout/sections/provocation.html
@@ -1,4 +1,4 @@
-<section id="white_envy" class="sectionSlide">
+<section id="provocation" class="sectionSlide">
 
     <div class="blackout"></div>
 
