--- a/src/template/layout/footer.html
+++ b/src/template/layout/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                &copy;
+                &copy; Клуб-результат
             </div>
         </div>
     </div>
