--- a/src/assets/style/base/_forms.scss
+++ b/src/assets/style/base/_forms.scss
@@ -22,8 +22,17 @@ textarea {
     .form-control {
 
         &-main {
+            background-color: rgba(0,0,0, 0.01);
+            border: 1px solid rgba(67,66,65,.47);
+            border-radius: 0;
+            box-shadow: inset 2px 2px 6px rgba(0,0,0, .11);
+            color: rgba(67,66,65,.47);
+            display: inline-block;
+            height: auto;
+            padding: 15px 20px 15px;
 
             &:focus {
+                @extend %outline_boxShadow_none;
                 box-shadow: inset 0 1px 1px rgba(0,0,0, .075),
                             0 0 8px rgba(0,0,0, .5);
             }
@@ -61,11 +70,11 @@ button, .btn {
 
     &-main {
         @extend %outline_boxShadow_none;
-        @extend %font-PT_Sans;
-        @extend %transition300ease;
         background-color: transparent;
         border: 1px solid rgba(0,0,0, 0.5);
-        /*text-transform: uppercase;*/
+        border-radius: 0;
+        padding: 14px 41px 13px 42px;
+        transition: All 300ms ease;
 
         &:link, &:visited, &:hover, &:active, &:focus, &:focus:active {
             @extend %outline_boxShadow_none;
