--- a/src/assets/style/modules/modals/_modal.scss
+++ b/src/assets/style/modules/modals/_modal.scss
@@ -4,10 +4,21 @@
 
     &-dialog {
 
+        .modal-header {
+
+            .close {
+                @extend %transition300ease;
+
+                &:focus, &:active:focus {
+                    @extend %outline_boxShadow_none;
+                }
+            }
+        }
+
         .form-order {
 
             .btn {
-                &-main, &-main:link, &-main:visited, &-main:hover, &-main:active, &-main:focus {
+                &-main, &-main:link, &-main:visited, &-main:hover, &-main:active, &-main:focus, &-main:active:focus {
 
                 }
             }
