Добавил красный цвет плэйсхолдеру в состоянии error

--- a/src/assets/style/modules/forms/_form-order.scss
+++ b/src/assets/style/modules/forms/_form-order.scss
@@ -30,7 +30,7 @@
             /*color: red;*/
 
             @include plhdr("&") {
-                /*color: red;*/
+                color: red;
             }
         }
 
