--- a/src/template/layout/footer.html
+++ b/src/template/layout/footer.html
@@ -1,6 +1,21 @@
 <footer id="footer" role="contentinfo">
     <div class="container">
         <div class="row">
+            <div class="col-sm-6">
+
+            </div>
+            <div class="col-sm-6">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div id="placeInFooter">
+                            //= ../modules/forms/formOrder.html
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col-xs-12">
                 &copy; Клуб-результат
             </div>
