--- a/src/assets/style/base/_common.scss
+++ b/src/assets/style/base/_common.scss
@@ -2,7 +2,7 @@
 
 /* Custom */
 @include placeholder {
-    @extend %font-PT_Sans;
+    @extend %transition300ease;
     opacity: 1;
     text-overflow: ellipsis;
     text-indent: 0px;
@@ -10,7 +10,7 @@
 }
 
 @include plhdr(":focus") {
-    text-indent: 700px;
+    text-indent: 500px;
 }
 
 * {
@@ -89,6 +89,10 @@ h4,
 h5,
 h6 {
     line-height: 1.3em;
+}
+
+section {
+
 }
 
 // Extras
