--- a/src/assets/style/modules/_sectionSlide.scss
+++ b/src/assets/style/modules/_sectionSlide.scss
@@ -9,6 +9,7 @@
     .sectionSlide-content {
 
         h2 {
+            @extend %font-PT_Serif;
             font-size: 2.5em; /*2.142857143em*/
         }
     }
