--- a/src/template/layout/sections/reasonsResult.html
+++ b/src/template/layout/sections/reasonsResult.html
@@ -29,7 +29,11 @@
                     </div>
 
                     <div class="col-xs-11 visible-xs">
-                        <div class="reson-offset reson-offset-top reson-offset-left reson-offset-right"></div>
+                        <div class="reson-offset reson-offset-top reson-offset-left reson-offset-right col-reson-offset-top">
+                            <div class="arrow-block">
+                                <div class="arrow"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -47,9 +51,6 @@
 
                             <div class="col-xs-2 visible-xs">
                                 <div class="reson-offset reson-offset-right reson-xs-right">
-                                    <div class="arrow-block">
-                                        <div class="arrow"></div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -63,11 +64,18 @@
                             </div>
 
                             <div class="col-xs-1 visible-xs col-reson-offset-xs-right">
-                                <div class="reson-offset reson-offset-right"></div>
+                                <div class="reson-offset reson-offset-right">
+                                    <div class="arrow-block">
+                                        <div class="arrow"></div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-4 hidden-xs">
+                        <div class="reson-main-line-left reson-main-line-diag reson-main-line-diag-top"></div>
+                        <div class="reson-main-line-right reson-main-line-diag reson-main-line-diag-top"></div>
+
                         <div class="reson reson-main">
                             <h3>Окружение:</h3>
                             <p>
@@ -87,6 +95,9 @@
                             </p>
                             <!--<img src="assets/img/reasonsResult/bankOfCucumbers.jpg" alt="банка огурцов" />-->
                         </div>
+
+                        <div class="reson-main-line-left reson-main-line-diag reson-main-line-diag-bottom"></div>
+                        <div class="reson-main-line-right reson-main-line-diag reson-main-line-diag-bottom"></div>
                     </div>
                     <div class="col-sm-4">
                         <div class="row">
@@ -100,11 +111,7 @@
                             </div>
 
                             <div class="col-xs-2 visible-xs">
-                                <div class="reson-offset reson-offset-right reson-xs-right">
-                                    <div class="arrow-block">
-                                        <div class="arrow"></div>
-                                    </div>
-                                </div>
+                                <div class="reson-offset reson-offset-right reson-xs-right"></div>
                             </div>
                         </div>
                         <div class="row">
@@ -117,7 +124,11 @@
                             </div>
 
                             <div class="col-xs-1 visible-xs col-reson-offset-xs-right">
-                                <div class="reson-offset reson-offset-right"></div>
+                                <div class="reson-offset reson-offset-right">
+                                    <div class="arrow-block">
+                                        <div class="arrow"></div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -136,26 +147,26 @@
                             </div>
 
                             <div class="col-xs-2 visible-xs">
-                                <div class="reson-offset reson-offset-right reson-xs-right">
-                                    <div class="arrow-block">
-                                        <div class="arrow"></div>
-                                    </div>
-                                </div>
+                                <div class="reson-offset reson-offset-right reson-xs-right"></div>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="row">
                             <div class="col-xs-11 col-sm-12">
-                                <div class="reson-offset reson-offset-left">
-                                    <div class="arrow-block">
+                                <div class="reson-offset reson-offset-left reson-main-line reson-main-line-bottom">
+                                    <div class="arrow-block visible-xs">
                                         <div class="arrow"></div>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="col-xs-1 visible-xs col-reson-offset-xs-right">
-                                <div class="reson-offset reson-offset-right"></div>
+                                <div class="reson-offset reson-offset-right">
+                                    <div class="arrow-block">
+                                        <div class="arrow"></div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -171,11 +182,7 @@
                             </div>
 
                             <div class="col-xs-2 visible-xs">
-                                <div class="reson-offset reson-offset-right reson-xs-right">
-                                    <div class="arrow-block">
-                                        <div class="arrow"></div>
-                                    </div>
-                                </div>
+                                <div class="reson-offset reson-offset-right reson-xs-right"></div>
                             </div>
                         </div>
                     </div>
@@ -189,7 +196,11 @@
                     </div>
 
                     <div class="col-xs-1 visible-xs col-reson-offset-xs-right">
-                        <div class="reson-offset reson-offset-right"></div>
+                        <div class="reson-offset reson-offset-right">
+                            <div class="arrow-block">
+                                <div class="arrow"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -212,11 +223,7 @@
                             </div>
 
                             <div class="col-xs-2 visible-xs">
-                                <div class="reson-offset reson-offset-right reson-xs-right">
-                                    <div class="arrow-block">
-                                        <div class="arrow"></div>
-                                    </div>
-                                </div>
+                                <div class="reson-offset reson-offset-right reson-xs-right"></div>
                             </div>
                         </div>
                     </div>
