Убрал цвет в блоке "причины результатов" в заголовке. Увеличил прозрачность blackout до 60%

--- a/src/assets/style/layout/sections/_reasonsResult.scss
+++ b/src/assets/style/layout/sections/_reasonsResult.scss
@@ -10,7 +10,7 @@
     .title {
 
         h2 {
-            color: rgb(91, 198, 198);
+            /*color: rgb(91, 198, 198);*/
         }
     }
 
