Увеличил НЕПрозначность до 80% у затемнение в блоке причины результата

--- a/src/assets/style/layout/sections/_reasonsResult.scss
+++ b/src/assets/style/layout/sections/_reasonsResult.scss
@@ -7,6 +7,10 @@
     padding-bottom: 50px;
     position: relative;
 
+    .blackout {
+        background-color: rgba(42,42,53,.8);
+    }
+
     .title {
 
         h2 {
