--- a/src/template/layout/sections/reasonsResult.html
+++ b/src/template/layout/sections/reasonsResult.html
@@ -25,7 +25,11 @@
                         <div class="reson-offset reson-offset-top"></div>
                     </div>
                     <div class="col-xs-4 col-sm-4 hidden-xs">
-                        <div class="reson-offset reson-offset-top reson-offset-right"></div>
+                        <div class="reson-offset reson-offset-top reson-offset-right">
+                            <div class="arrow-block">
+                                <div class="arrow"></div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="col-xs-11 visible-xs">
@@ -56,8 +60,13 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-11 col-sm-12">
-                                <div class="reson-offset reson-offset-left">
-                                    <div class="arrow-block visible-xs">
+                                <div class="reson-offset reson-offset-left visible-xs">
+                                    <div class="arrow-block">
+                                        <div class="arrow"></div>
+                                    </div>
+                                </div>
+                                <div class="reson-offset reson-offset-left col-reson-offset-xs-right reson-arrow-top hidden-xs">
+                                    <div class="arrow-block">
                                         <div class="arrow"></div>
                                     </div>
                                 </div>
@@ -206,7 +215,11 @@
 
                 <div class="row">
                     <div class="col-sm-4 hidden-xs">
-                        <div class="reson-offset reson-offset-bottom reson-offset-left"></div>
+                        <div class="reson-offset reson-offset-bottom reson-offset-left col-reson-offset-xs-right reson-arrow-top">
+                            <div class="arrow-block">
+                                <div class="arrow"></div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="row">
@@ -228,7 +241,11 @@
                         </div>
                     </div>
                     <div class="col-sm-4 hidden-xs">
-                        <div class="reson-offset reson-offset-bottom reson-offset-right"></div>
+                        <div class="reson-offset reson-offset-bottom reson-offset-right col-reson-offset-top reson-arrow-left">
+                            <div class="arrow-block">
+                                <div class="arrow"></div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="col-xs-11 visible-xs col-reson-offset-bottom">
