#resonsResult. Подправил положение линии, которая идёт от "Окружения" до нижнгего блока, в small screen <768px на 0.

--- a/src/assets/style/layout/sections/_reasonsResult.scss
+++ b/src/assets/style/layout/sections/_reasonsResult.scss
@@ -228,6 +228,10 @@
                     &-bottom {
                         bottom: -47px;
                         /*min-height: 123px !important;*/
+
+                        @media (max-width:767px) {
+                            bottom: 0;
+                        }
                     }
                 }
             }
