--- a/src/assets/style/layout/sections/_reasonsResult.scss
+++ b/src/assets/style/layout/sections/_reasonsResult.scss
@@ -4,8 +4,12 @@
     @extend %bg-cover;
     background-image: url('../img/reasonsResult/bg_1.jpg');
     color: #fff;
-    padding-bottom: 50px;
+    padding-bottom: 3.571428571em; /*50px*/
     position: relative;
+
+    h3 {
+        font-size: 1.714285714em;
+    }
 
     .blackout {
         background-color: rgba(42,42,53,.8);
@@ -140,9 +144,9 @@
         .reson {
             background-color: rgba(91, 198, 198, 0.5);
             border-radius: 100px;
-            min-height: 163px;
+            min-height: 11.642857143em;
             overflow: hidden;
-            padding: 40px 20px;
+            padding: 2.857142857em 1.428571429em; /*40px 20px*/
             position: relative;
             text-align: center;
             z-index: 99;
@@ -169,7 +173,7 @@
 
             &-main {
                 bottom: -47px; /*-82px -40px*/
-                min-height: 279px; /*326px*/
+                min-height: 19.928571429em; /* 279px 326px*/
                 position: relative;
 
                 h3 {
@@ -247,7 +251,7 @@
 
             &-offset {
                 margin: 0 -15px;
-                min-height: 116px;
+                min-height: 8.285714286em; /* 116px*/
                 position: relative;
 
                 &-top {
