Вынес в body цвет текста (     color: map-get($colors, "c_w"); - #FFF)

--- a/src/assets/style/base/_common.scss
+++ b/src/assets/style/base/_common.scss
@@ -27,6 +27,7 @@ html {
 }
 
 body {
+    color: map-get($colors, "c_w");
     @extend %font-PT_Sans;
     font-size: 14px;
     line-height: 1.2em;
