--- a/src/template/layout/sections/reasonsResult.html
+++ b/src/template/layout/sections/reasonsResult.html
@@ -101,6 +101,7 @@
                             </div>
                             <p>
                                 То же самое с физическим состоянием и в отношениях.
+                                Ты = среднее между теми, с кем ты общаешься.
                             </p>
                             <!--<img src="assets/img/reasonsResult/bankOfCucumbers.jpg" alt="банка огурцов" />-->
                         </div>
