#resonResult. Добавил текст в блока "Качественно новые:"

--- a/src/template/layout/sections/reasonsResult.html
+++ b/src/template/layout/sections/reasonsResult.html
@@ -151,7 +151,7 @@
                                 <div class="reson">
                                     <h3>Качественно новые</h3>
                                     <p>
-                                        Количественно новые связи, знакомства, партнёрства.
+                                        Количественно новые связи, знакомства, партнёрства, идеи, решения.
                                     </p>
                                 </div>
                             </div>
