--- a/src/assets/style/layout/_header.scss
+++ b/src/assets/style/layout/_header.scss
@@ -47,13 +47,13 @@
                 font-size: 1.36em;
             }
 
-            .btn {
+            /*.btn {
 
                 &.btn-main {
                     font-size: 0.9em;
                     text-transform: uppercase;
                 }
-            }
+            }*/
         }
 
         .smTxt {
