--- a/src/assets/style/base/_forms.scss
+++ b/src/assets/style/base/_forms.scss
@@ -70,7 +70,8 @@ button, .btn {
 
     &-main {
         @extend %outline_boxShadow_none;
-        background-color: transparent;
+        /*background-color: transparent;*/
+        background-color: rgba(0,0,0, 0.2);
         border: 1px solid rgba(0,0,0, 0.5);
         border-radius: 0;
         font-size: 0.9em;
@@ -78,20 +79,25 @@ button, .btn {
         text-transform: uppercase;
         transition: All 300ms ease;
 
-        &:link, &:visited, &:hover, &:active, &:focus, &:focus:active {
+        &:link, &:visited {
             @extend %outline_boxShadow_none;
-            background-color: transparent;
+            /*background-color: transparent;*/
+            background-color: rgba(0,0,0, 0.2);
+            border: 1px solid rgba(0,0,0, 0.5);
+            color: #fff;
+        }
+
+        &:hover, &:focus, &:focus:active {
+            @extend %outline_boxShadow_none;
+            background-color: rgba(0,0,0, 0.35);
             border: 1px solid rgba(0,0,0, 0.75);
             color: #fff;
         }
 
-        &:hover, &:focus {
-            background-color: rgba(0,0,0, 0.25);
-        }
-
         &:active, &:focus:active {
             border: 1px solid rgba(0,0,0, 0.3);
-            background-color: rgba(0,0,0, 0.6);
+            background-color: rgba(0,0,0, 0.65);
+            color: #fff;
         }
     }
 }
