--- a/src/assets/style/layout/sections/_instrumentsResult.scss
+++ b/src/assets/style/layout/sections/_instrumentsResult.scss
@@ -18,8 +18,9 @@
             .btn {
 
                 &-main {
-                    color: #daa520;
-                    font-size: 1.5em;
+                    color: #ffd700; /*#daa520*/
+                    /*font-size: 1.5em;*/
+                    font-size: 1.3em;
                     margin-top: 2em;
                 }
             }
