--- a/src/template/layout/sections/combustion.html
+++ b/src/template/layout/sections/combustion.html
@@ -7,8 +7,21 @@
             <div class="col-xs-12">
                 <div class="sectionSlide-content">
                     <h2>
-                        Вроде CRM настроена, скрипты и гайды внедрены, поставщики адекватные, лиды есть, продажи есть, даже к помощнице не придраться. Но все равно чувствуешь себя Гусем.
+                        Что, если не удалось еще выйти на доход от 35 млн. руб в месяц?
                     </h2>
+
+                    <div class="txt">
+                        <p>
+                            Мы проведем для тебя бесплатный мастер-класс, на котором выступит один из участников клуба.
+                            Выступающий – получит возможность собрать во едино его опыт в бизнесе и изложить его.
+                            Ты – услышишь бизнес-исповедь от человека с результатом в твоей стране, твоём городе. Здесь и сейчас.
+                            Или просто с пользой проведешь время.Как только наберется 10 слушателей – мы в течении 5 дней организуем мастер-класс.
+                        </p>
+                    </div>
+
+                    <p>
+                        <button type="button" class="btn btn-main" data-toggle="modal" data-target="#modalOrder" data-service="Мастер-класс" role="button">Оставить заявку</button>
+                    </p>
                 </div>
             </div>
         </div>
