--- a/src/template/layout/footer.html
+++ b/src/template/layout/footer.html
@@ -1,23 +1,16 @@
-<footer id="footer" role="contentinfo">
+<footer id="footer" class="sectionSlide" role="contentinfo">
+
+    <div class="blackout"></div>
+
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-
+                <p>&copy; Клуб-результат.</p>
+                <p>Г. Минск, ул. Долгобродская, д.12.</p>
             </div>
             <div class="col-sm-6">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div id="placeInFooter">
-                            //= ../modules/forms/formOrder.html
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-12">
-                &copy; Клуб-результат
+                <p>Записаться на собеседование:</p>
+                <p>+375 (29) 6-377-311</p>
             </div>
         </div>
     </div>
