--- a/src/assets/style/layout/_footer.scss
+++ b/src/assets/style/layout/_footer.scss
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
 #footer {
-
+    background-image: url('../img/header/bg_3.jpg');
+    background-color: #151515;
+    box-shadow: inset 0 15px 15px rgba(0,0,0, 0.5);
+    padding: 3em 0;
 }
