--- a/src/template/layout/sections/combustion.html
+++ b/src/template/layout/sections/combustion.html
@@ -19,6 +19,8 @@
                         </p>
                     </div>
 
+                    <p class="seats">Осталось <img src="assets/img/combustion/6.png" alt="6" title="6" /> мест</p>
+
                     <p>
                         <button type="button" class="btn btn-main" data-toggle="modal" data-target="#modalOrder" data-service="Мастер-класс" role="button">Оставить заявку</button>
                     </p>
