--- a/src/template/layout/sections/combustion.html
+++ b/src/template/layout/sections/combustion.html
@@ -15,11 +15,12 @@
                             Мы проведем для тебя бесплатный мастер-класс, на котором выступит один из участников клуба.
                             Выступающий – получит возможность собрать во едино его опыт в бизнесе и изложить его.
                             Ты – услышишь бизнес-исповедь от человека с результатом в твоей стране, твоём городе. Здесь и сейчас.
-                            Или просто с пользой проведешь время.Как только наберется 10 слушателей – мы в течении 5 дней организуем мастер-класс.
+                            Или просто с пользой проведешь время.
+                            Как только наберется 10 слушателей – мы в течении 5 дней организуем мастер-класс.
                         </p>
                     </div>
 
-                    <p class="seats">Осталось <img src="assets/img/combustion/6.png" alt="6" title="6" /> мест</p>
+                    <p class="seats">Осталось 6 мест</p>
 
                     <p>
                         <button type="button" class="btn btn-main" data-toggle="modal" data-target="#modalOrder" data-service="Мастер-класс" role="button">Оставить заявку</button>
