--- a/src/template/layout/sections/reasonsResult.html
+++ b/src/template/layout/sections/reasonsResult.html
@@ -113,7 +113,7 @@
                         <div class="row">
                             <div class="col-xs-10 col-sm-12">
                                 <div class="reson">
-                                    <h3>Количество людей</h3>
+                                    <h3>Качество людей</h3>
                                     <p>
                                         Только те, кто с таким же результатом и выше.
                                     </p>
@@ -184,7 +184,7 @@
                         <div class="row">
                             <div class="col-xs-10 col-sm-12">
                                 <div class="reson">
-                                    <h3>Качество мативации</h3>
+                                    <h3>Качество мотивации</h3>
                                     <p>
                                         Вдохновение результатами участников клуба.
                                     </p>
