Изменил отступы в шапке и добавил кнопку под предлажением и перенёс "малый шрифт" под кнопку. Сделал кнопки min-width: 365px, за искл. кнопки в телефонах (правый верхний угол).

--- a/src/assets/style/base/_forms.scss
+++ b/src/assets/style/base/_forms.scss
@@ -75,6 +75,7 @@ button, .btn {
         border: 1px solid rgba(0,0,0, 0.5);
         border-radius: 0;
         font-size: 0.9em;
+        min-width: 365px;
         padding: 14px 41px 13px 42px;
         text-transform: uppercase;
         transition: All 300ms ease;
