--- a/src/template/layout/header.html
+++ b/src/template/layout/header.html
@@ -25,11 +25,6 @@
                         <p>
                             <button type="button" class="btn btn-main" data-toggle="modal" data-target="#modalOrder" data-service="Шапка" role="button">Консультация</button>
                         </p>
-
-                        <div class="smTxt pull-right">
-                            <p>Участником клуба может являться любой желающий с личным доходом от 35 млн в месяц в данный момент, либо опытом заработка аналогичной суммы за месячный период.</p>
-                            <p>К участию в клубе допускаются только прошедшие собеседование.</p>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -42,6 +37,14 @@
                         Достигать в окружении единомышленников с
                         личным доходом от 35 млн. руб.*
                     </h1>
+                    <p>
+                        <button type="button" class="btn btn-main" data-toggle="modal" data-target="#modalOrder" data-service="Шапка" role="button">Присоединиться</button>
+                    </p>
+
+                    <div class="smTxt">
+                        <p>Участником клуба может являться любой желающий с личным доходом от 35 млн в месяц в данный момент, либо опытом заработка аналогичной суммы за месячный период.</p>
+                        <p>К участию в клубе допускаются только прошедшие собеседование.</p>
+                    </div>
                 </div>
             </div>
         </div>
