--- a/src/assets/style/utilites/_vars.scss
+++ b/src/assets/style/utilites/_vars.scss
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
 $colors: (
-    "c_w": $c_w
+    "c_w": $c_w,
+    "bp" : $bp,
+    "bpo": $bpo,
+    "bb" : $bb,
+    "bbo": $bbo,
+    "bs" : $bs
 );
