--- a/src/assets/style/modules/_blackout.scss
+++ b/src/assets/style/modules/_blackout.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 .blackout {
-    background-color: rgba(42,42,53,0.6);
+    background-color: map-get($colors, "bbo");
     /*background-image: url(../img/blackout.png);*/ /*img для кроссбраузерности, браузеры не поддерживающие rgba*/
     position: absolute;
     bottom: 0;
