--- a/src/template/layout/sections/clubProgram.html
+++ b/src/template/layout/sections/clubProgram.html
@@ -11,14 +11,10 @@
                     <div class="content">
                         <ul class="lstn">
                             <li><i class="fa fa-asterisk" aria-hidden="true"></i> Встречи раз в неделю в уютной рабочей обстановке</li>
-                            <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> Отчет о проделанной работе, сверка с целью</li>
-                            <li><i class="fa fa-long-arrow-right" aria-hidden="true"></i> План-кинжал на следующую неделю</li>
-                            <li><i class="fa fa-thumb-tack" aria-hidden="true"></i> Мнения от людей-результата «как сработает»</li>
-                            <li><i class="fa fa-angle-right" aria-hidden="true"></i> Изложение своих гипотез и опыта</li>
-
-                            <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Изложение своих гипотез и опыта»</li>
-                            <li><i class="fa fa-space-shuttle" aria-hidden="true"></i> Изложение своих гипотез и опыта»</li>
-                            <li><i class="fa fa-fighter-jet" aria-hidden="true"></i> Изложение своих гипотез и опыта»</li>
+                            <li><i class="fa fa-file-text-o " aria-hidden="true"></i> Отчет о проделанной работе, сверка с целью</li>
+                            <li><i class="fa fa-thumb-tack" aria-hidden="true"></i> План-кинжал на следующую неделю</li>
+                            <li><i class="fa fa-graduation-cap" aria-hidden="true"></i> Мнения от людей-результата «как сработает»</li>
+                            <li><i class="fa fa-suitcase" aria-hidden="true"></i> Изложение своих гипотез и опыта</li>
                         </ul>
 
                         <div class="txt">
