Кнопкам придал фирменный цвет основной.

--- a/src/assets/style/base/_forms.scss
+++ b/src/assets/style/base/_forms.scss
@@ -74,6 +74,7 @@ button, .btn {
         background-color: rgba(0,0,0, 0.2);
         border: 1px solid rgba(0,0,0, 0.5);
         border-radius: 0;
+        color: map-get($colors, "bp");
         font-size: 0.9em;
         min-width: 365px;
         padding: 14px 41px 13px 42px;
