Придал фирменный цвет иконке-логотипу. Кнопке в телефонах (шапка) правый-верхний угол, - белый цвет

--- a/src/assets/style/layout/_header.scss
+++ b/src/assets/style/layout/_header.scss
@@ -18,16 +18,19 @@
                 font-size: 2em;
 
                 p {
+
                 }
 
                 .fa {
-
+                    /*color: #98ABF8;*/
+                    color: map-get($colors, "bp");
                 }
             }
 
             .desc {
 
                 p {
+
                 }
             }
         }
@@ -50,6 +53,7 @@
             .btn {
 
                 &.btn-main {
+                    color: map-get($colors, "c_w");
                     min-width: auto;
                     /*font-size: 0.9em;
                     text-transform: uppercase;*/
