--- a/src/assets/style/layout/_header.scss
+++ b/src/assets/style/layout/_header.scss
@@ -2,6 +2,7 @@
 
 #header {
     background-image: url('../img/header/bg_1.jpg');
+    box-shadow: inset 0 -15px 15px rgba(0,0,0, 0.5);
 
     .container {
         position: relative;
