Придал размеру текста кнопкам размер 1.3em (переменную $fz-button) в блоках: #header, #combustion, #instrumentsResult (Там, где есть кнопки по центру).

--- a/src/assets/style/layout/_header.scss
+++ b/src/assets/style/layout/_header.scss
@@ -72,6 +72,13 @@
             margin-bottom: 0.5em;
             /*text-align: center;*/
         }
+
+        .btn {
+
+            &-main {
+                font-size: $fz-button;
+            }
+        }
     }
 
     .smTxt {
