#clubProgram. Заменил цвет 2-ого заголовка на соответствующую меременную масива цветовэ

--- a/src/assets/style/layout/sections/_clubProgram.scss
+++ b/src/assets/style/layout/sections/_clubProgram.scss
@@ -31,7 +31,7 @@
                 margin: 0 -2em 20px;
 
                 h3 {
-                    color: #353535;
+                    color: map-get($colors, "bs");
                     margin: -1.2em 0 0;
                     padding: 1.2em 0;
                 }
