Добавил эффектов: прикрутил параллакс и background-attachment: fixed;

--- a/src/assets/style/layout/sections/_instrumentsResult.scss
+++ b/src/assets/style/layout/sections/_instrumentsResult.scss
@@ -2,6 +2,7 @@
 
 #instrumentsResult {
     background-image: url('../img/instrumentsResult/bg_1.jpg');
+    background-attachment: fixed;
 
     .sectionSlide {
 
